# myblog

./: .gitignore  README.en.md  README.md
Docs/: CONTRIBUTING.md  README.md  github-secrets-setup.md
docker/: Dockerfile.backend  (+2 more)
my_blog_backend/: main.py  pyproject.toml
my_blog_backend/BaseEngine/: __init__.py  base.py  config.py  engine_registry.py
my_blog_backend/LinkGateway/: __init__.py  api_mapper.py  auth.py  db.py  db_link.py  dependency_injector.py  gateway.py  inner_comm.py  logs.py  outer_comm.py  path_manager.py  plugin.py  protocol.py  registry.py  service_comm.py  service_proxy.py  standards.py
my_blog_backend/engines/FileEngine/: api_routes.py  comment_manager.py  database.py  file_engine.json  file_engine.py  logger.py  post_manager.py  queue_manager.py
my_blog_backend/engines/PermDog/: api_routes.py  database.py  permdog.json  permdog.py  permission_manager.py
my_blog_backend/plugins/: performance_monitor.py  sample_plugin.py  traffic_monitor.py
my_blog_backend/services/interaction-service/: api.py  core.py  database.py  interaction-service.py  logger.py  service.json
my_blog_backend/services/post-service/: api.py  core.py  logger.py  post-service.py  service.json
my_blog_backend/services/user-server/: logger.py  models.py  router.py  service.json  service.py
my_blog_backend/tests/FileEngine/: test_permission_fields.py
my_blog_backend/tests/LinkGateway/: test_gateway.py  test_logs.py  test_standards.py
my_blog_backend/tests/integration/: test_integration.py
my_blog_backend/tools/: architecture_checker.py  startup_diagnostics.py
(+105 files in other folders)
