[project]
name = "my-blog-backend"
version = "0.1.0"
description = "Backend micro-service architecture core communication component"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.26.0",
]

[tool.setuptools.packages.find]
exclude = ["tests", "*.tests", "*.tests.*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
